--- a/app-frontend/android/app/src/main/AndroidManifest.xml
+++ b/app-frontend/android/app/src/main/AndroidManifest.xml
@@ -26,6 +26,13 @@
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
+               <intent-filter>
+        <action android:name="android.intent.action.VIEW" />
+        <category android:name="android.intent.category.DEFAULT" />
+        <category android:name="android.intent.category.BROWSABLE" />
+        <!-- Set the scheme to what your backend developer provides -->
+        <data android:scheme="alfaruq" /> 
+    </intent-filter>
         </activity>
         <!-- Don't delete the meta-data below.
              This is used by the Flutter tool to generate GeneratedPluginRegistrant.java -->
