--- a/app-frontend/pubspec.yaml
+++ b/app-frontend/pubspec.yaml
@@ -44,6 +44,9 @@ dependencies:
   audioplayers: ^6.0.0
   app_links: ^6.4.1
   adhan_dart: ^1.2.0
+  video_player: ^2.10.1
+  chewie: ^1.13.0
+  wakelock_plus: ^1.4.0
 
 dev_dependencies:
   flutter_test:
