--- a/app-frontend/android/gradle.properties
+++ b/app-frontend/android/gradle.properties
@@ -1,3 +1,8 @@
-org.gradle.jvmargs=-Xmx8G -XX:MaxMetaspaceSize=4G -XX:ReservedCodeCacheSize=512m -XX:+HeapDumpOnOutOfMemoryError
+# Project-wide Gradle settings.
+
+# FIXED: Memory reduced to 1024m so it works on your computer
+org.gradle.jvmargs=-Xmx1024m -XX:MaxMetaspaceSize=512m -XX:ReservedCodeCacheSize=256m -XX:+HeapDumpOnOutOfMemoryError
+
+# AndroidX package structure support
 android.useAndroidX=true
 android.enableJetifier=true
