--- a/app-frontend/pubspec.yaml
+++ b/app-frontend/pubspec.yaml
@@ -53,6 +53,11 @@ dependencies:
   timeago: ^3.7.1
   syncfusion_flutter_pdfviewer: ^31.2.16
   google_sign_in: ^6.1.0
+  screen_protector: ^1.4.12
+  flutter_native_splash: ^2.4.7
+  just_audio: ^0.10.5
+  audio_video_progress_bar: ^2.0.3
+  just_audio_background: ^0.0.1-beta.17
 
 dev_dependencies:
   flutter_test:
@@ -82,3 +87,10 @@ flutter_launcher_icons:
   min_sdk_android: 21 # Optional, good for modern apps
   adaptive_icon_background: "#FFFFFF" # Hex color for Android adaptive background
   adaptive_icon_foreground: "assets/images/icon.png" # Same as image_path usually
+
+flutter_native_splash:
+  color: "#000000"
+  image: "assets/images/icon.png"
+  android_12:
+    image: "assets/images/icon.png"
+    color: "#000000"
