background audio and url and bookmark and also register widgets done

--- a/app-frontend/android/app/src/main/AndroidManifest.xml
+++ b/app-frontend/android/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS"/>
     <uses-permission android:name="android.permission.VIBRATE" />
     
-    <!-- Foreground Service Permissions (Required for Audio Background Play) -->
+    <!-- Foreground Service Permissions -->
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE_MEDIA_PLAYBACK"/>
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE_DATA_SYNC"/>
@@ -43,8 +43,9 @@
         android:enableOnBackInvokedCallback="true"
         android:usesCleartextTraffic="true">
         
+        <!-- FIXED: Changed android:name to AudioServiceActivity to fix PlatformException -->
         <activity
-            android:name=".MainActivity"
+            android:name="com.ryanheise.audioservice.AudioServiceActivity"
             android:exported="true"
             android:launchMode="singleTop"
             android:theme="@style/LaunchTheme"
@@ -73,14 +74,21 @@
             </intent-filter>
         </activity>
 
-        <!-- CRITICAL: Audio Service for just_audio_background -->
-        <service android:name="com.ryanheise.just_audio_background.AudioService"
+        <!-- Audio Service Configuration -->
+        <service android:name="com.ryanheise.audioservice.AudioService"
                  android:foregroundServiceType="mediaPlayback"
                  android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MEDIA_BUTTON" />
             </intent-filter>
         </service>
+
+        <receiver android:name="com.ryanheise.audioservice.MediaButtonReceiver"
+                  android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MEDIA_BUTTON" />
+            </intent-filter>
+        </receiver>
 
         <meta-data
             android:name="flutterEmbedding"
