--- a/app-frontend/pubspec.yaml
+++ b/app-frontend/pubspec.yaml
@@ -44,12 +44,9 @@ dependencies:
   audioplayers: ^6.0.0
   app_links: ^6.4.1
   adhan_dart: ^1.2.0
-  video_player: ^2.10.1
   chewie: ^1.13.0
-  wakelock_plus: ^1.4.0
   firebase_core: ^4.2.1
   firebase_messaging: ^16.0.4
-  youtube_explode_dart: ^3.0.5
   timeago: ^3.7.1
   syncfusion_flutter_pdfviewer: ^31.2.16
   google_sign_in: ^6.1.0
@@ -58,6 +55,8 @@ dependencies:
   just_audio: ^0.10.5
   audio_video_progress_bar: ^2.0.3
   just_audio_background: ^0.0.1-beta.17
+  youtube_player_flutter: ^9.1.3
+  youtube_explode_dart: ^3.0.5
 
 dev_dependencies:
   flutter_test:
